# netbane

./: .gitignore  pyproject.toml  setup.cfg  test.py
example/: config.yaml.example  example.py
example/inventory/: defaults.yaml.example
netbane/: __init__.py  config.py.example
netbane/drivers/: ios.py
netbane/drivers/ios/: __init__.py  ios.py
netbane/plugins/connections/: __init__.py
netbane/plugins/inventory/: netbox.py
netbane/plugins/tasks/: netbane_get.py
