[metadata]
name = netbane
version = 0.0.1
author = Austin de Coup-Crank
author_email = austindcc@gmail.com
description = Framework for customizing NAPALM and Nornir beyond what community drivers and plugins provide
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/austind/netbane
project_urls =
    Bug Tracker = https://github.com/austind/netbane/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.6

[tool.isort]
profile = "black"

[flake8]
max-line-length = 88
extend-ignore = E203
